--- a/package.json
+++ b/package.json
@@ -57,11 +57,11 @@
     "vue-screen-utils": "^1.0.0-beta.13"
   },
   "peerDependencies": {
-    "@popperjs/core": "^2.0.0",
+    "@floating-ui/dom": "^1.5.3",
     "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@popperjs/core": "^2.11.6",
+    "@floating-ui/dom": "^1.5.3",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
